# openclaw-ruh

./: .dockerignore  .env.example  .gitignore  .linear.toml  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESIGN.md  LICENSE  README.md  SECURITY.md  TESTING.md  TODOS.md  docker-compose.dev.yml  docker-compose.yml  openclaw-approve.py  package-lock.json  package.json  start-hermes-agent.sh  start.sh  tsconfig.base.json
.claude/: MEMORY.md  launch.json  start-hermes.sh
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  pull_request_template.md
.husky/: pre-commit  pre-push
admin-ui/: Dockerfile  bunfig.toml  middleware.test.ts  next.config.ts  package-lock.json  package.json  playwright.config.ts  test-lucide-mock.ts  test-setup.ts  tsconfig.json
agent-builder-ui/: .env.example  .gitignore  Dockerfile  bun-test.d.ts  bunfig.toml  eslint.config.mjs  jest.config.ts  jest.polyfills.js  jest.setup.ts  middleware.test.ts  middleware.ts  next.config.ts  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.json
agent-runtime/: .gitignore  next.config.ts  package-lock.json  package.json
agents/: README.md  analyst-1.md  tester-1.md  worker-1.md
backend/: .env.example  channel_manager.py  conversation_store.py  main.py  requirements.txt  sandbox_manager.py  store.py
codezero2pi-website/: Dockerfile  package-lock.json  package.json  tailwind.config.ts
desktop-app/src-tauri/: Cargo.toml  tauri.conf.json
desktop-app/src-tauri/src/: lib.rs  main.rs
desktop-app/src-tauri/src/commands/: auth.rs  settings.rs
(+1819 files in other folders)
