[package]
name = "ruh-desktop"
version = "0.1.0"
description = "Ruh.ai Desktop Application"
authors = ["Ruh AI"]
edition = "2021"

[lib]
name = "ruh_desktop_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-notification = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs-next = "2"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
